[Refactor] 전체 변경